Fixed pop-up shifting other html elements

--- a/docs/frontend/web.css
+++ b/docs/frontend/web.css
@@ -97,7 +97,7 @@ body {
 }
 
 .container{
-position: relative;
+position: fixed;
 z-index: 10;    
 top: 50%;
 left: 50%;
@@ -131,7 +131,7 @@ text-align: center;
     background: rgb(0, 0, 0, .61);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     display: flex;
     justify-content: center;
